create csv file from time.plist

--- a/AttendanceApp/View/Base.lproj/Main.storyboard
+++ b/AttendanceApp/View/Base.lproj/Main.storyboard
@@ -170,13 +170,30 @@
                                     <action selector="didTaplinkButton:" destination="n3B-hu-m25" eventType="touchUpInside" id="J9d-bZ-mPN"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2w-Yh-Mv3">
+                                <rect key="frame" x="39" y="938" width="116" height="63"/>
+                                <color key="backgroundColor" red="1" green="0.31166616359999999" blue="0.20913687049999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="63" id="OVK-n0-deL"/>
+                                    <constraint firstAttribute="width" constant="116" id="rVN-Qw-Pkw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
+                                <state key="normal" title="CSV">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="exportToCSV:" destination="n3B-hu-m25" eventType="touchUpInside" id="DBQ-Lk-XGo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="xhe-Eu-Bps" firstAttribute="trailing" secondItem="2r2-NE-pJx" secondAttribute="trailing" constant="38" id="Bfc-5r-KbS"/>
+                            <constraint firstItem="M2w-Yh-Mv3" firstAttribute="leading" secondItem="xhe-Eu-Bps" secondAttribute="leading" constant="39" id="DoT-y2-yUF"/>
                             <constraint firstItem="NRI-NB-Pz7" firstAttribute="leading" secondItem="xhe-Eu-Bps" secondAttribute="leading" id="Hjg-eq-BtA"/>
                             <constraint firstItem="NRI-NB-Pz7" firstAttribute="top" secondItem="xhe-Eu-Bps" secondAttribute="top" id="O0M-7c-XKu"/>
                             <constraint firstItem="xhe-Eu-Bps" firstAttribute="bottom" secondItem="NRI-NB-Pz7" secondAttribute="bottom" constant="144" id="ThV-Jq-yJf"/>
+                            <constraint firstItem="xhe-Eu-Bps" firstAttribute="bottom" secondItem="M2w-Yh-Mv3" secondAttribute="bottom" constant="23" id="Vf1-MU-8Ol"/>
                             <constraint firstItem="xhe-Eu-Bps" firstAttribute="trailing" secondItem="NRI-NB-Pz7" secondAttribute="trailing" constant="20" id="X4p-Xo-tZk"/>
                             <constraint firstItem="xhe-Eu-Bps" firstAttribute="bottom" secondItem="2r2-NE-pJx" secondAttribute="bottom" constant="20" id="d9I-Ep-Jda"/>
                             <constraint firstItem="2r2-NE-pJx" firstAttribute="top" secondItem="NRI-NB-Pz7" secondAttribute="bottom" constant="55" id="xhY-gp-Cjw"/>
@@ -196,7 +213,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rZa-nV-d8z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2282.7232796486087" y="1050.5859375"/>
+            <point key="canvasLocation" x="2282.2840409956075" y="1050.5859375"/>
         </scene>
         <!--Sign In-->
         <scene sceneID="BU8-l2-HVP">
